# zemo

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README.txt  Recorder.spec  VERSION  analyze_recording.py  build_exe.bat  build_version_info.py  linux_internal.py  main.py  pyproject.toml  record.py  requirements.txt  run_analyzer.sh  run_audio_test.sh  run_recorder.bat  run_recorder.sh  settings.json  todo.txt  version_info.txt
detector/: __init__.py  emotion_model.py  pair_analyzer.py  realtime.py
docs/: SYNC_AND_MERGE.md  USER_MANUAL.md
gazer/: __init__.py  eye_tracker.py  pyi_rth_eyetrax.py
recorder/: __init__.py  common.py  config.py  old_screen.py  recorders.py  screen_recorder.py  webcam_recorder.py
recorder/audio/: README.md  __init__.py  internal.py  internal_linux.py  internal_win.py  mux_audio_into_video.py  record_test.py
recorder/core/: __init__.py  screen.py  webcam.py
recorder/ui/: __init__.py  app.py  dialogs.py  float_button.py  panels.py
recorder/ui/app/: __init__.py  _recording_mixin.py  _ui_mixin.py  window.py
tests/: __init__.py  __main__.py  test_audio.py  test_deps.py  test_emotion_detection.py  test_gaze.py  test_screen.py  test_ui.py  test_webcam.py
tests/unit/: conftest.py  test_common.py  test_config.py  test_environment.py  test_eye_tracker.py  test_float_button.py
validation/: README.md  __init__.py  analyze_recordings.py  merge_recordings.py  view_merged.py
