[project]
name = "zemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "mss>=6.0.0",
    "Pillow>=8.0.0",
    "imageio-ffmpeg>=0.4.9",
    "pyautogui==0.9.54",
    "keyboard==0.13.5",
    "deepface>=0.0.79",
    "tf-keras>=2.20.1",
    "sounddevice>=0.5.5",
    "pyaudiowpatch>=0.2.12.8",
]

[project.optional-dependencies]
# Windows: faster screen capture (dxcam) and system audio (WASAPI).
windows = [
    "dxcam-cpp==0.2.5",
    "PyAudioWPatch>=0.2.12.0",
]
# Linux: system audio via PulseAudio/PipeWire monitor (sounddevice).
linux = [
    "sounddevice>=0.4.6",
]
