[project]
name = "zemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "mss>=6.0.0",
    "pillow>=8.0.0",
    "imageio-ffmpeg>=0.4.9",
    "pyautogui==0.9.54",
    "keyboard==0.13.5",
    "pyaudiowpatch>=0.2.12.0",
    "pre-commit>=4.5.1",
    "pip>=26.0.1",
    "dxcam-cpp==0.2.5",
    "av>=12.0.0",
    "pyside6>=6.4.0",
    "eyetrax",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
# Windows: faster screen capture (dxcam) and system audio (WASAPI).
windows = [
    "dxcam-cpp==0.2.5",
    "PyAudioWPatch>=0.2.12.0",
]
# Linux: system audio via PulseAudio/PipeWire monitor (sounddevice).
linux = [
    "sounddevice>=0.4.6",
]
dev = [
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
    "integration: real hardware or slow manual-adjacent checks (opt-in with -m integration)",
]

[tool.coverage.run]
source = ["recorder", "gazer", "validation"]
branch = true
omit = [
    "*/.venv/*",
    "*/__main__.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
